--- a/docs-ref-autogen/azure-iot-provisioning-device-amqp/SaslTpm.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device-amqp/SaslTpm.yml
@@ -43,7 +43,7 @@ items:
           description: ''
         - id: getSasToken
           type:
-            - GetSasToken
+            - '@azure-iot-provisioning-device-amqp.GetSasToken'
           description: ''
   - uid: azure-iot-provisioning-device-amqp.SaslTpm.name
     name: name
@@ -87,4 +87,4 @@ items:
           description: ''
       return:
         type:
-          - Promise<SaslResponseFrame>
+          - Promise<@azure-iot-provisioning-device-amqp.SaslResponseFrame>
