--- a/docs-ref-autogen/azure-iot-provisioning-service/ProvisioningServiceClient.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/ProvisioningServiceClient.yml
@@ -225,7 +225,7 @@ items:
           optional: true
         - id: deleteCallback
           type:
-            - DeleteCallback
+            - '@azure-iot-provisioning-service.DeleteCallback'
           description: |
             Invoked upon completion of the operation.
           optional: true
@@ -258,7 +258,7 @@ items:
           optional: true
         - id: deleteCallback
           type:
-            - DeleteCallback
+            - '@azure-iot-provisioning-service.DeleteCallback'
           description: |
             Invoked upon completion of the operation.
           optional: true
@@ -291,7 +291,7 @@ items:
           optional: true
         - id: deleteCallback
           type:
-            - DeleteCallback
+            - '@azure-iot-provisioning-service.DeleteCallback'
           description: |
             Invoked upon completion of the operation.
           optional: true
