--- a/docs-ref-autogen/azure-iothub/Client.Transport.yml
+++ b/docs-ref-autogen/azure-iothub/Client.Transport.yml
@@ -28,7 +28,7 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<Connected>
+            - '@azure-iothub.Client.Callback<Connected>'
           description: ''
           optional: true
   - uid: azure-iothub.Client.Transport.disconnect
@@ -43,7 +43,7 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<Disconnected>
+            - '@azure-iothub.Client.Callback<Disconnected>'
           description: ''
   - uid: azure-iothub.Client.Transport.getFeedbackReceiver
     name: getFeedbackReceiver
@@ -57,7 +57,8 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<@azure-iothub.Client.ServiceReceiver>
+            - >-
+              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
           description: ''
   - uid: azure-iothub.Client.Transport.getFileNotificationReceiver
     name: getFileNotificationReceiver
@@ -71,7 +72,8 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<@azure-iothub.Client.ServiceReceiver>
+            - >-
+              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
           description: ''
   - uid: azure-iothub.Client.Transport.send
     name: send
@@ -95,6 +97,6 @@ items:
           description: ''
         - id: done
           type:
-            - Callback<MessageEnqueued>
+            - '@azure-iothub.Client.Callback<MessageEnqueued>'
           description: ''
           optional: true
