--- a/docs-ref-autogen/azure-iothub/Client.yml
+++ b/docs-ref-autogen/azure-iothub/Client.yml
@@ -4,6 +4,8 @@ items:
     name: Client
     fullName: Client
     children:
+      - azure-iothub.Client.Callback
+      - azure-iothub.Client.TransportCtor
       - azure-iothub.Client.close
       - azure-iothub.Client.getFeedbackReceiver
       - azure-iothub.Client.getFileNotificationReceiver
@@ -36,6 +38,26 @@ items:
     extends:
       name: EventEmitter
     package: azure-iothub
+  - uid: azure-iothub.Client.Callback
+    name: Callback
+    fullName: Callback<T>
+    children: []
+    langs:
+      - typeScript
+    type: class
+    summary: |+
+
+    package: azure-iothub
+  - uid: azure-iothub.Client.TransportCtor
+    name: TransportCtor
+    fullName: TransportCtor
+    children: []
+    langs:
+      - typeScript
+    type: class
+    summary: |+
+
+    package: azure-iothub
   - uid: azure-iothub.Client.close
     name: close
     children: []
@@ -48,7 +70,7 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<Disconnected>
+            - '@azure-iothub.Client.Callback<Disconnected>'
           description: |
             The function to call when the operation is
                                        complete. `done` will be passed an Error object
@@ -69,7 +91,8 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<@azure-iothub.Client.ServiceReceiver>
+            - >-
+              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
           description: |
             The function to call when the operation is
                                          complete. `done` will be called with two
@@ -89,7 +112,8 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<@azure-iothub.Client.ServiceReceiver>
+            - >-
+              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
           description: |
             The function to call when the operation is
                                          complete. `done` will be called with two
@@ -117,7 +141,7 @@ items:
           description: ''
         - id: done
           type:
-            - Callback<any>
+            - '@azure-iothub.Client.Callback<any>'
           description: |
             The callback to call with the result of the method execution.
           optional: true
@@ -139,7 +163,7 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<Connected>
+            - '@azure-iothub.Client.Callback<Connected>'
           description: |
             The function to call when the operation is
                                        complete. `done` will be passed an Error object
@@ -172,7 +196,7 @@ items:
                                          it will be converted.
         - id: done
           type:
-            - Callback<MessageEnqueued>
+            - '@azure-iothub.Client.Callback<MessageEnqueued>'
           description: |
             The function to call when the operation is
                                          complete. `done` will be called with two
@@ -228,7 +252,7 @@ items:
                                              connect" permissions on an IoT hub.
         - id: transportCtor
           type:
-            - TransportCtor
+            - '@azure-iothub.Client.TransportCtor'
           description: ''
           optional: true
       return:
@@ -257,7 +281,7 @@ items:
                                        "service connect" permissions on an IoT hub.
         - id: transportCtor
           type:
-            - TransportCtor
+            - '@azure-iothub.Client.TransportCtor'
           description: ''
           optional: true
       return:
