--- a/docs-ref-autogen/azure-iothub/Device.yml
+++ b/docs-ref-autogen/azure-iothub/Device.yml
@@ -4,6 +4,8 @@ items:
     name: Device
     fullName: Device
     children:
+      - azure-iothub.Device.ConnectionState
+      - azure-iothub.Device.DeviceStatus
       - azure-iothub.Device.constructor
       - azure-iothub.Device.authentication
       - azure-iothub.Device.cloudToDeviceMessageCount
@@ -38,6 +40,29 @@ items:
     package: azure-iothub
     deprecated:
       content: ''
+  - uid: azure-iothub.Device.ConnectionState
+    name: ConnectionState
+    fullName: ConnectionState
+    children: []
+    langs:
+      - typeScript
+    type: class
+    summary: >-
+
+      "ConnectionState" is a type alias. It refers to "connected" and
+      "disconnected".
+    package: azure-iothub
+  - uid: azure-iothub.Device.DeviceStatus
+    name: DeviceStatus
+    fullName: DeviceStatus
+    children: []
+    langs:
+      - typeScript
+    type: class
+    summary: |-
+
+      "DeviceStatus" is a type alias. It refers to "enabled" and "disabled".
+    package: azure-iothub
   - uid: azure-iothub.Device.constructor
     name: Device
     children: []
@@ -108,7 +133,7 @@ items:
       content: 'connectionState?: ConnectionState'
       return:
         type:
-          - ConnectionState
+          - '@azure-iothub.Device.ConnectionState'
   - uid: azure-iothub.Device.connectionStateUpdatedTime
     name: connectionStateUpdatedTime
     fullName: connectionStateUpdatedTime
@@ -199,7 +224,7 @@ items:
       content: 'status?: DeviceStatus'
       return:
         type:
-          - DeviceStatus
+          - '@azure-iothub.Device.DeviceStatus'
   - uid: azure-iothub.Device.statusReason
     name: statusReason
     fullName: statusReason
