--- a/docs-ref-autogen/toc.yml
+++ b/docs-ref-autogen/toc.yml
@@ -229,6 +229,15 @@
     - uid: azure-iot-provisioning-device-amqp.SaslTpm
       name: SaslTpm
       items: []
+    - uid: azure-iot-provisioning-device-amqp.GetSasToken
+      name: GetSasToken
+      items: []
+    - uid: azure-iot-provisioning-device-amqp.GetSasTokenCallback
+      name: GetSasTokenCallback
+      items: []
+    - uid: azure-iot-provisioning-device-amqp.SaslResponseFrame
+      name: SaslResponseFrame
+      items: []
 - uid: azure-iot-provisioning-device-http
   name: azure-iot-provisioning-device-http
   items:
@@ -270,6 +279,9 @@
       items: []
     - uid: azure-iot-provisioning-device.X509SecurityClient
       name: X509SecurityClient
+      items: []
+    - uid: azure-iot-provisioning-device.RegistrationStatus
+      name: RegistrationStatus
       items: []
     - uid: azure-iot-provisioning-device.X509Registration
       name: X509Registration
@@ -325,8 +337,23 @@
     - uid: azure-iot-provisioning-service.X509Certificates
       name: X509Certificates
       items: []
+    - uid: azure-iot-provisioning-service.AttestationTypes
+      name: AttestationTypes
+      items: []
+    - uid: azure-iot-provisioning-service.BulkOperationMode
+      name: BulkOperationMode
+      items: []
+    - uid: azure-iot-provisioning-service.ProvisioningStatus
+      name: ProvisioningStatus
+      items: []
+    - uid: azure-iot-provisioning-service.RegistrationStatus
+      name: RegistrationStatus
+      items: []
     - uid: azure-iot-provisioning-service.ProvisioningServiceClient
       name: ProvisioningServiceClient
+      items: []
+    - uid: azure-iot-provisioning-service.DeleteCallback
+      name: DeleteCallback
       items: []
     - uid: azure-iot-provisioning-service.Query
       name: Query
@@ -336,6 +363,9 @@
       items: []
     - uid: azure-iot-provisioning-service.QuerySpecification
       name: QuerySpecification
+      items: []
+    - uid: azure-iot-provisioning-service.QueryCallback
+      name: QueryCallback
       items: []
 - uid: azure-iothub
   name: azure-iothub
@@ -372,6 +402,12 @@
       items: []
     - uid: azure-iothub.JobClient
       name: JobClient
+      items: []
+    - uid: azure-iothub.JobStatus
+      name: JobStatus
+      items: []
+    - uid: azure-iothub.JobType
+      name: JobType
       items: []
     - uid: azure-iothub.Query
       name: Query
