--- a/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationResult.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationResult.yml
@@ -53,4 +53,4 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - RegistrationStatus
+          - '@azure-iot-provisioning-device.RegistrationStatus'
