--- a/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationState.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationState.yml
@@ -50,4 +50,4 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - RegistrationStatus
+          - '@azure-iot-provisioning-device.RegistrationStatus'
