--- a/docs-ref-autogen/azure-iot-provisioning-service/AttestationMechanism.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/AttestationMechanism.yml
@@ -42,7 +42,7 @@ items:
       content: 'type: AttestationTypes'
       return:
         type:
-          - AttestationTypes
+          - '@azure-iot-provisioning-service.AttestationTypes'
   - uid: azure-iot-provisioning-service.AttestationMechanism.x509
     name: x509
     fullName: x509
