--- a/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperation.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperation.yml
@@ -42,4 +42,4 @@ items:
       content: 'mode: BulkOperationMode'
       return:
         type:
-          - BulkOperationMode
+          - '@azure-iot-provisioning-service.BulkOperationMode'
