--- a/docs-ref-autogen/azure-iot-provisioning-service/DeviceRegistrationState.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/DeviceRegistrationState.yml
@@ -141,4 +141,4 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - RegistrationStatus
+          - '@azure-iot-provisioning-service.RegistrationStatus'
