--- a/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
@@ -138,7 +138,7 @@ items:
       content: 'provisioningStatus: ProvisioningStatus'
       return:
         type:
-          - ProvisioningStatus
+          - '@azure-iot-provisioning-service.ProvisioningStatus'
   - uid: azure-iot-provisioning-service.IndividualEnrollment.registrationId
     name: registrationId
     fullName: registrationId
