--- a/docs-ref-autogen/azure-iot-device/index.yml
+++ b/docs-ref-autogen/azure-iot-device/index.yml
@@ -12,6 +12,7 @@ items:
       - azure-iot-device.SharedAccessKeyAuthenticationProvider
       - azure-iot-device.SharedAccessSignatureAuthenticationProvider
       - azure-iot-device.Twin
+      - azure-iot-device.TwinProperties
       - azure-iot-device.X509AuthenticationProvider
       - azure-iot-device.createWithSharedAccessKey
       - azure-iot-device.createWithX509Certificate
@@ -182,5 +183,7 @@ references:
     name: SharedAccessSignatureAuthenticationProvider
   - uid: azure-iot-device.Twin
     name: Twin
+  - uid: azure-iot-device.TwinProperties
+    name: TwinProperties
   - uid: azure-iot-device.X509AuthenticationProvider
     name: X509AuthenticationProvider
