--- a/docs-ref-autogen/azure-iot-device/Client.Transport.yml
+++ b/docs-ref-autogen/azure-iot-device/Client.Transport.yml
@@ -400,12 +400,12 @@ items:
     summary: ''
     syntax:
       content: >-
-        function setOptions(options: any, done: (err?: Error, result?:
-        TransportConfigured) => void)
+        function setOptions(options: DeviceClientOptions, done: (err?: Error,
+        result?: TransportConfigured) => void)
       parameters:
         - id: options
           type:
-            - any
+            - '@azure-iot-device.DeviceClientOptions'
           description: ''
         - id: done
           type:
