--- a/docs-ref-autogen/toc.yml
+++ b/docs-ref-autogen/toc.yml
@@ -169,9 +169,6 @@
     - uid: azure-iot-device-http.Http
       name: Http
       items: []
-    - uid: azure-iot-device-http.HttpReceiverOptions
-      name: HttpReceiverOptions
-      items: []
 - uid: azure-iot-device-mqtt
   name: azure-iot-device-mqtt
   items:
@@ -199,6 +196,21 @@
     - uid: azure-iot-device.DeviceMethodResponse
       name: DeviceMethodResponse
       items: []
+    - uid: azure-iot-device.AmqpTransportOptions
+      name: AmqpTransportOptions
+      items: []
+    - uid: azure-iot-device.DeviceClientOptions
+      name: DeviceClientOptions
+      items: []
+    - uid: azure-iot-device.HttpReceiverOptions
+      name: HttpReceiverOptions
+      items: []
+    - uid: azure-iot-device.HttpTransportOptions
+      name: HttpTransportOptions
+      items: []
+    - uid: azure-iot-device.MqttTransportOptions
+      name: MqttTransportOptions
+      items: []
     - uid: azure-iot-device.SharedAccessKeyAuthenticationProvider
       name: SharedAccessKeyAuthenticationProvider
       items: []
@@ -214,15 +226,6 @@
     - uid: azure-iot-device.X509AuthenticationProvider
       name: X509AuthenticationProvider
       items: []
-- uid: azure-iot-mqtt-base
-  name: azure-iot-mqtt-base
-  items:
-    - uid: azure-iot-mqtt-base.MqttBase
-      name: MqttBase
-      items: []
-    - uid: azure-iot-mqtt-base.MqttBase.TransportConfig
-      name: TransportConfig
-      items: []
 - uid: azure-iot-provisioning-device-amqp
   name: azure-iot-provisioning-device-amqp
   items:
@@ -231,18 +234,6 @@
       items: []
     - uid: azure-iot-provisioning-device-amqp.AmqpWs
       name: AmqpWs
-      items: []
-    - uid: azure-iot-provisioning-device-amqp.SaslTpm
-      name: SaslTpm
-      items: []
-    - uid: azure-iot-provisioning-device-amqp.GetSasToken
-      name: GetSasToken
-      items: []
-    - uid: azure-iot-provisioning-device-amqp.GetSasTokenCallback
-      name: GetSasTokenCallback
-      items: []
-    - uid: azure-iot-provisioning-device-amqp.SaslResponseFrame
-      name: SaslResponseFrame
       items: []
 - uid: azure-iot-provisioning-device-http
   name: azure-iot-provisioning-device-http
